fix hubpub event emails
